--- a/src/main/resources/templates/todo/list.html
+++ b/src/main/resources/templates/todo/list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
@@ -33,7 +33,7 @@
                   <th scope="col" class="text-nowrap">ID</th>
                   <th scope="col">タイトル</th>
                   <th scope="col" class="text-nowrap">期限</th>
-                  <th scope="col" class="text-nowrap">状態</th>
+                  <th scope="col" class="text-nowrap">ステータス</th>
                   <th scope="col" class="text-nowrap text-end">操作</th>
                 </tr>
               </thead>
