--- a/src/main/resources/templates/todo/list.html
+++ b/src/main/resources/templates/todo/list.html
@@ -21,7 +21,7 @@
     <main class="container my-4">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <h2 class="h4 mb-0">ToDo一覧</h2>
-        <a class="btn btn-primary" href="/todos/new">新規作成</a>
+        <a class="btn btn-primary" th:href="@{/todos/new}">新規作成</a>
       </div>
 
       <div class="card shadow-sm">
