--- a/src/main/resources/templates/todos/list.html
+++ b/src/main/resources/templates/todos/list.html
@@ -24,6 +24,8 @@
         <a class="btn btn-primary" th:href="@{/todos/new}">新規作成</a>
       </div>
 
+      <div class="alert alert-success" th:if="${message}" th:text="${message}">登録が完了しました</div>
+
       <div class="card shadow-sm">
         <div class="card-body p-0">
           <div class="table-responsive">
